Fix social icons discord tooltip visibility

--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -65,7 +65,7 @@
           .tooltiptext {
             visibility: hidden;
             width: 70px;
-            top: -125%;
+            top: 125%;
             left: 50%;
             margin-left: -35px;
             background-color: $secondary;
@@ -197,14 +197,16 @@
           justify-content: center;
           align-items: center;
           position: absolute;
-          bottom: 2rem;
-          // padding-top: 4rem;
-          // padding-bottom: 2rem;
+          bottom: 0;
+          padding-bottom: 2rem;
+          overflow: hidden;
+          // overflow: hidden;
+          padding-top: 4rem;
           left: 0;
           right: 0;
           margin: 0 auto;
           gap: 4rem;
-          max-height: 2rem;
+          // max-height: 2rem;
           // width: 100%;
           h1 {
             animation-delay: 0.6s;
@@ -222,6 +224,7 @@
             flex: 1;
             color: $secondary-text;
             animation-delay: 1.6s;
+
             span {
               display: block;
             }
@@ -233,7 +236,6 @@
             height: fit-content;
             margin: 0;
             animation-delay: 1.6s;
-            overflow: hidden;
             .icon {
               height: 20px;
             }
